post assignment; update announcements

--- a/index.adoc
+++ b/index.adoc
@@ -16,8 +16,9 @@ Instructor: link:https://www.cs.brynmawr.edu/~alinen[Aline Normoyle]
 [.anns]
 
 * link:assts/asst11.html[Assignment 11]: Due April 11th
-* Lab April 8: Code Jam 05
-* Class April 10: **Quiz 05**, link:studyguide5.html[Study Guide 5]
+* link:assts/asst12.html[Assignment 12]: Due April 18th
+* Lab April 15: link:studyguide6.html[Study Guide 6]
+* Final Exam: 9:30am - 12:30pm, Tuesday, May 6th, BYC 127
 
 == Course Info
 
