--- a/assts/header.adoc
+++ b/assts/header.adoc
@@ -8,6 +8,9 @@
 :leveloffset: +1
 :toc: left
 :csweb: https://www.cs.brynmawr.edu/~alinen
-:repo: https://github.com/BrynMawr-CS223-S25
+:gitrepo: https://github.com/BrynMawr-CS223-F25
+:repo: cs223-f25-classwork
 :semester: s25
 :stem: mathjax
+:CLASS: CS223
+:SEMESTER: F25
