--- a/schedule.adoc
+++ b/schedule.adoc
@@ -1,158 +1,187 @@
-[cols="1,2,6a", options="header"]
+[cols="1,2,4a,2a", options="header"]
 |===
 | Week 
 | Date 
 | Agenda
+| Resources
 
 //-----------------------------
 | 1
-| January 21, 23 anchor:week01[]
+| {WEEK01} anchor:week01[]
 | *Introductions, Hello C* 
 
-* Topics: Programming at the command line, Makefiles, From Java to C 
+* Topics: Programming at the command line, Makefiles, From Java to C, strings, arrays, function stack, basic pointers
 * Read: link:https://diveintosystems.org/singlepage/#_appendix_1_chapter_1_for_java_programmers[Chapter 1: From JAVA to C] 
+* link:assts/asst01.html[Assignment 01]: Due {ASST01_DUE}
+* Lab: SSH and Github setup
+
+| 
+* link:assts/ssh-setup.html[SSH Setup]
 * link:http://linuxcommand.org/lc3_learning_the_shell.php[Learning the shell]
-* link:assts/asst01.html[Assignment 01]: Due January 24
-* Lab Jan 21: SSH and Github setup
 
 //-----------------------------
 | 2 
-| January 28, 30 anchor:week02[]
-| *More C, Introduction to Pointers* 
+| {WEEK02} anchor:week02[]
+| *More C, Pointers* 
 
-* Topics: Function stacks, strings, arrays, introductory pointers
+* Topics: More pointers, malloc/free, heap, file I/O, gdb, valgrind, hexedit
 * Read: link:https://diveintosystems.org/singlepage/#_a_deeper_dive_into_c_programming[Sections 2.1-2.8, 2.9 (Command line arguments only)] 
+* Read: link:https://diveintosystems.org/singlepage/#_c_debugging_tools[Sections 3.1-3.3] 
 * link:https://pythontutor.com/c.html#mode=edit[C Tutor]
-* Lab Jan 28: Quiz 01 practice, link:studyguide1.html[Study Guide: Quiz 01]
-* link:assts/asst02.html[Assignment 02]: Due Jan 31
+* Lab: Check-ins
+* link:assts/asst02.html[Assignment 02]: Due {ASST02_DUE}
+
+| TBD
 
 //-----------------------------
 |3
-|February 4, 6 anchor:week03[]
-|*More pointers, malloc/free* 
+|{WEEK03} anchor:week03[]
+|*Data structures in C* 
 
-** Class CANCELED Feb 6**
-* Topics: Heap, dynamically-allocated memory (malloc, free), More arrays
-* Read: link:https://diveintosystems.org/singlepage/#_a_deeper_dive_into_c_programming[Sections 2.1-2.8, 2.9 (Command line arguments only)] 
-* Lab Feb 4: **Code Jam 01**
-* link:assts/asst03.[Assignment 03]: Due Feb 7
+* Topics: linked lists, graphs, trees, hash tables
+* Read: link:http://svslibrary.pbworks.com/f/Data+Structures+and+Algorithm+Analysis+in+C+-+Mark+Allen+Weiss.pdf[Data Structures in C, Mark Allen Weiss, Chpt 3]
+* Lab: Coding Challenge 01, link:studyguide1.html#_coding[Coding problems 1]
+
+| TBD
 
 //-----------------------------
 |4
-|February 11, 13 anchor:week04[]
-|*Pointer-based data structures. Debugging.* 
+|{WEEK04} anchor:week04[]
+|*Binary and Data Representations* 
 
-* Class Feb 11: **Quiz 01** 
-* Topics: Linked lists in C. GDB, Valgrind
-* Read: link:https://diveintosystems.org/singlepage/#_c_debugging_tools[Sections 3.1-3.3] 
-* Read: link:http://svslibrary.pbworks.com/f/Data+Structures+and+Algorithm+Analysis+in+C+-+Mark+Allen+Weiss.pdf[Data Structures in C, Mark Allen Weiss, Chpt 3]
-* Lab Feb 11: Quiz 02 Practice, link:studyguide2.html[Study Guide: Quiz 02]
-* link:assts/asst04.[Assignment 04]: Due Feb 14
+* Topics: number systems, integer/float/char binary formats, struct layouts, endianess, bit ops
+* Read: link:https://diveintosystems.org/singlepage/#_binary_and_data_representation[Chapter 4.1-4.9] 
+* link:assts/asst03.html[Assignment 03]: Due {ASST03_DUE}
+* Lab: Check-ins
+
+| TBD
 
 //-----------------------------
 |5
-|February 18, 20 anchor:week05[]
-|*Binary and Data Representation* 
-
-* Read: link:https://diveintosystems.org/singlepage/#_binary_and_data_representation[Chapter 4.1-4.9] 
-* link:assts/asst05.html[Assignment 05]: Due Feb 21
-* Lab Feb 18: **Code Jam 02** 
-* Class Feb 20: **Quiz 02**
-
-//-----------------------------
-|6
-|February 25, 27 anchor:week06[]
-|*Bit Ops*
-
-* Read: link:https://diveintosystems.org/singlepage/#_binary_and_data_representation[Chapter 4.1-4.9] 
-* link:assts/asst06.html[Assignment 06]: Due Feb 28
-* Lab Feb 25: Quiz 03 Practice, link:studyguide3.html[Study Guide 3]
-
-//-----------------------------
-|7
-|March 4,6 anchor:week07[]
+|{WEEK05} anchor:week05[]
 |*Assembly* 
 
+* instruction set architecture, machine code, memory forms, x86_64 instructions
 * Read: link:https://diveintosystems.org/singlepage/#_what_von_neumann_knew_computer_architecture[Section 5, 5.1] 
 * Read: link:https://diveintosystems.org/singlepage/##_assembly_chapter[Chapter 6] 
 * Read: link:https://diveintosystems.org/singlepage/#_x64_assembly_chapter[Chapter 7 (7.1-7.3,7.5,7.10), 10] 
-* link:assts/asst07.html[Assignment 07]: Due Friday March 7 
-* Lab March 4: **Code Jam 03*
-* Class March 6 **Quiz 03**
+* Lab: Coding Challenge 02, link:studyguide2.html#_coding[Coding problems 2]
+
+| 
 
 //-----------------------------
-|8
-|March 11, 13 anchor:week08[]
-|*Spring Break*
+|6
+|{WEEK06} anchor:week06[]
+| *Review*
+
+* Lab: Check-ins and midterm practice 
+* Midterm 01: In-class {MIDTERM01_WK6} (1.5 hrs)
+* link:assts/asst04.html[Assignment 04]: Due {ASST04_DUE}
+
+| 
+* link:studyguide1.html[Study Guide 1]
+* link:studyguide2.html[Study Guide 2]
+* link:studyGuide3.html[Study Guide 3]
+
+//-----------------------------
+|7
+|{WEEK07} anchor:week07[]
+|*Break*
 
 * *NO LECTURES, LABS, HOMEWORKS*
 
+| 
+
 //-----------------------------
-|9
-|March 18, 20 anchor:week09[]
+|8
+|{WEEK08} anchor:week08[]
 |*The operating system, Processes* 
 
+* topics: processes, fork 
 * Read: link:https://diveintosystems.org/singlepage/#_the_operating_system[Chapter 13, skip section 13.3] 
-* link:assts/asst08.html[Assignment 08]: Due THURSDAY March 20 **Hardcopy due at Park 200B**
-* Lab March 18: Practice Quiz 04 link:studyguide4.html[Study Guide: Quiz 04]
+* link:assts/asst05.html[Assignment 05]: Due {ASST05_DUE}
+
+| TBD
+
+//-----------------------------
+|9
+|{WEEK09} anchor:week09[]
+| *Threads I*
+
+* topics: threads vs. processes, designing concurrent algorithms, pthreads
+* Read: link:https://diveintosystems.org/singlepage/#_some_advanced_c_features[Section 2.9.3, 2.9.4 (void* andpointer arithmetic)] 
+* Read: link:https://diveintosystems.org/singlepage/#_leveraging_shared_memory_in_the_multicore_era[Chapter 14] 
+* Lab: Coding Challenge 03, link:studyguide3.html#_coding[Coding problems 3]
+
+| TBD
 
 //-----------------------------
 |10
-|March 25, 27 anchor:week10[]
-|*Threads I* 
+|{WEEK10} anchor:week10[]
+|*Threads II* 
 
-* Read: link:https://diveintosystems.org/singlepage/#_some_advanced_c_features[Section 2.9.3, 2.9.4 (void* andpointer arithmetic)] 
+* topics: performance, deadlock, thread safety
 * Read: link:https://diveintosystems.org/singlepage/#_leveraging_shared_memory_in_the_multicore_era[Chapter 14] 
-* link:assts/asst09.html[Assignment 09]: Due March 28
-* Lab March 25: **Code Jam 04**
-* Class March 27: **Quiz 04**
+* link:assts/asst06.html[Assignment 06]: Due {ASST06_DUE}
+
+| TBD
 
 //-----------------------------
 |11
-|April 1, 3 anchor:week11[]
-|*Threads II* 
+|{WEEK11} anchor:week11[]
+|*Threads III* 
 
-* Read: link:https://diveintosystems.org/singlepage/#_leveraging_shared_memory_in_the_multicore_era[Chapter 14] 
+* topics: deadlock, producer/consumer
 * link:assts/asst10.html[Assignment 10]: Due April 4th
-* Lab April 1: Quiz 05 Practice, link:studyguide5.html[Study Guide 5]
+* Lab: Coding Challenge 04, link:studyguide4.html#_coding[Coding problems 4]
+
+| TBD
 
 //-----------------------------
 |12
-|April 8, 10 anchor:week12[]
-|*Threads III/ Memory* 
-
-* Read: link:https://diveintosystems.org/singlepage/#_leveraging_shared_memory_in_the_multicore_era[Chapter 14] 
-* link:assts/asst11.html[Assignment 11]: Due April 11th
-* Class April 10: **Quiz 05**
-* Lab April 8: **Code Jam 05**
-
-//-----------------------------
-|13
-|April 15, 17 anchor:week13[]
-|*Memory* 
+|{WEEK12} anchor:week12[]
+|*Memory, allocators* 
 
 * Read:"My malloc: mylloc and mhysa" by Johan Montelius 
 * Read: link:https://diveintosystems.org/singlepage/#_storage_and_the_memory_hierarchy[Chapter 11.1-11.3] 
-* link:assts/asst12.html[Assignment 12]: Due April 18
-* Lab April 15: Worksheet practice
+* Lab: Checkins
+* link:assts/asst07.html[Assignment 07]: Due {ASST07_DUE}
+
+| 
+
+//-----------------------------
+|13
+|{WEEK13} anchor:week13[]
+|*Thanksgiving, Midterm 02* 
+
+* Midterm 02, In-class {MIDTERM02} (1.5 hrs)
+* **Thanksgiving: No Class Thursday**
+
+| 
 
 //-----------------------------
 |14
-|April 22, 24 anchor:week14[]
-|*Code Optimization, C++* 
+|{WEEK14} anchor:week14[]
+| *Code Optimization, C++*
 
 * Read: link:https://diveintosystems.org/singlepage/#_code_optimization[Chapter 12] 
-* Lab April 22: Code Jam 06 - Individual programming challenge
-* link:assts/asst13.html[Assignment 13]: Due April 25, **Hardcopy due in class April 24 - no late work accepted**
+* link:assts/asst08.html[Assignment 08]: Due {ASST08_DUE}
+* Lab: Checkins
+
+| 
+
 
 //-----------------------------
 |15
-|April 29, May 1 anchor:week15[]
+|{WEEK15} anchor:week15[]
 |*Review* 
 
-* **NO LAB April 29**
-* Lab April 29, link:studyguide-final[Final Study Guide], link:studyguide6.html[Study Guide 6]
+* Lab: Coding Challenge 05, link:study-guide5.html#Coding[Coding problems 5]
 * In-Class: Practice Final and Review
+
+|
+* link:studyguide-final.html[Final Study Guide]
+* link:studyguide6.html[Study Guide 6]
 
 |===
 
