--- a/schedule.adoc
+++ b/schedule.adoc
@@ -18,6 +18,8 @@
 | 
 * link:assts/ssh-setup.html[SSH Setup]
 * link:http://linuxcommand.org/lc3_learning_the_shell.php[Learning the shell]
+* link:lectures/Lecture-Week01-Sept2-Intro.pdf[Lecture - Sept 2]
+* link:lectures/Lecture-Week01-Sept4-C.pdf[Lecture - Sept 4]
 
 //-----------------------------
 | 2 
