--- a/assts/asst01.adoc
+++ b/assts/asst01.adoc
@@ -151,7 +151,7 @@ Run the following command inside your `{ASST}` directory.
 [source, subs="attributes"]
 ----
 $ cd {ASST}
-$ git add *.c
+$ git add *.c Makefile
 $ git commit -m "Descriptive message"
 $ git push
 ----
